--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             const LAT = 51.42;
             const LON = -0.22;
 
-            if (GAS_WEB_APP_URL === 'YOUR_GAS_WEB_APP_URL') {
+            if (GAS_WEB_APP_URL === 'https://script.google.com/macros/s/AKfycbw01mNTl78BDoCcUS8q0ZppwxeGkhHgXqYf-hpqMRcIEi1_8DawUsLImeTuehdJ2KrIFw/exec') {
                 displayElement.innerHTML = `
                     <p class="text-red-500">Error: Google Apps Script URL not set.</p>
                     <p class="text-sm mt-2">Please edit this file and replace 'YOUR_GAS_WEB_APP_URL' with your deployed web app URL.</p>
