--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             // IMPORTANT: Replace 'YOUR_GAS_WEB_APP_URL' with the URL of your deployed Google Apps Script web app.
             // This URL must be from the most recent "New deployment" of your script.
-            const GAS_WEB_APP_URL = 'YOUR_GAS_WEB_APP_URL';
+            const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbyXjcK-wj_ZB4RlGES5j1BA6WoXwUFij8aQz6OEQtN7kIHNp0TWFcy6E85KWCeu2d_UyA/exec';
             const LAT = 51.42;
             const LON = -0.22;
 
