--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="weather-card rounded-xl">
-        <h1 class="text-3xl font-bold mb-4">South West London</h1>
+        <h1 class="text-3xl font-bold mb-4">Please work!</h1>
         <div id="weather-display" class="flex flex-col items-center justify-center">
             <p>Loading weather data...</p>
         </div>
