--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="weather-card rounded-xl">
-        <h1 class="text-3xl font-bold mb-4">Please work!</h1>
+        <h1 class="text-3xl font-bold mb-4"></h1>
         <div id="weather-display" class="flex flex-col items-center justify-center">
             <p>Loading weather data...</p>
         </div>
@@ -87,9 +87,9 @@
                 77: "Snow grains",
                 80: "Light rain showers",
                 81: "Moderate rain showers",
-                82: "Violent rain showers",
-                85: "Light snow showers",
-                86: "Heavy snow showers",
+                82: "Heavy rain showers",
+                85: "Light snow",
+                86: "Heavy snow",
                 95: "Thunderstorm",
                 96: "Thunderstorm with hail",
                 99: "Thunderstorm with heavy hail"
