--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
     <div class="weather-card rounded-xl">
         <h1 class="text-3xl font-bold mb-4"></h1>
         <div id="weather-display" class="flex flex-col items-center justify-center">
-            <p>Loading weather data...</p>
+            <p>Checking weather for journey to LMS...</p>
         </div>
-        <p class="text-xs text-gray-400 mt-4">Powered by Open-Meteo</p>
     </div>
 
     <script>
@@ -62,39 +61,39 @@
 
             const apiUrl = `${GAS_WEB_APP_URL}?lat=${LAT}&lon=${LON}`;
 
-            // Helper function to get weather description from WMO code
-            const getWeatherDescription = (code) => {
-              const descriptions = {
-                0: "Clear sky",
-                1: "Mainly clear",
-                2: "Partly cloudy",
-                3: "Overcast",
-                45: "Fog",
-                48: "Depositing rime fog",
-                51: "Light drizzle",
-                53: "Moderate drizzle",
-                55: "Dense drizzle",
-                56: "Light freezing drizzle",
-                57: "Dense freezing drizzle",
-                61: "Light rain",
-                63: "Moderate rain",
-                65: "Heavy rain",
-                66: "Light freezing rain",
-                67: "Heavy freezing rain",
-                71: "Light snow fall",
-                73: "Moderate snow fall",
-                75: "Heavy snow fall",
-                77: "Snow grains",
-                80: "Light rain showers",
-                81: "Moderate rain showers",
-                82: "Heavy rain showers",
-                85: "Light snow",
-                86: "Heavy snow",
-                95: "Thunderstorm",
-                96: "Thunderstorm with hail",
-                99: "Thunderstorm with heavy hail"
-              };
-              return descriptions[code] || "Unknown weather";
+            // Helper function to get a weather emoji from a WMO code
+            const wmoWeatherCodeToEmoji = (code) => {
+                const emojis = {
+                    0: "☀️", // Clear sky
+                    1: "🌤️", // Mainly clear
+                    2: "⛅️", // Partly cloudy
+                    3: "☁️", // Overcast
+                    45: "🌫️", // Fog
+                    48: "🌫️", // Depositing rime fog
+                    51: "🌦️", // Light drizzle
+                    53: "🌧️", // Moderate drizzle
+                    55: "🌧️", // Dense drizzle
+                    56: "🥶🌧️", // Light freezing drizzle
+                    57: "🥶🌧️", // Dense freezing drizzle
+                    61: "🌧️", // Light rain
+                    63: "🌧️", // Moderate rain
+                    65: "🌧️", // Heavy rain
+                    66: "🥶🌧️", // Light freezing rain
+                    67: "🥶🌧️", // Heavy freezing rain
+                    71: "🌨️", // Light snow fall
+                    73: "🌨️", // Moderate snow fall
+                    75: "🌨️", // Heavy snow fall
+                    77: "🌨️", // Snow grains
+                    80: "⛈️", // Light rain showers
+                    81: "⛈️", // Moderate rain showers
+                    82: "⛈️", // Violent rain showers
+                    85: "🌨️", // Light snow showers
+                    86: "🌨️", // Heavy snow showers
+                    95: "🌩️", // Thunderstorm
+                    96: "🌩️", // Thunderstorm with hail
+                    99: "🌩️" // Thunderstorm with heavy hail
+                };
+                return emojis[code] || "❓";
             };
 
             fetch(apiUrl)
@@ -110,11 +109,14 @@
                         const weatherCode = data.current.weather_code;
                         const windSpeed = data.current.wind_speed_10m.toFixed(1);
                         const description = getWeatherDescription(weatherCode);
+                        const weatherEmoji = wmoWeatherCodeToEmoji(weatherCode);
 
                         displayElement.innerHTML = `
-                            <p class="text-5xl mt-4 font-bold">${temperature}°C</p>
-                            <p class="text-2xl mt-4 capitalize">${description}</p>
-                            <p class="text-md mt-2 text-gray-400">Wind: ${windSpeed} km/h</p>
+                            <p class="text-7xl mb-4">${weatherEmoji}</p>
+                            <div class="flex flex-col items-center justify-center">
+                                <p class="text-md capitalize">${description}. ${temperature}°C</p>
+                                <p class="text-md mt-2 text-gray-400">Wind: ${windSpeed} km/h</p>
+                            </div>
                         `;
                     } else {
                         displayElement.innerHTML = '<p class="text-red-500">No current weather data found.</p>';
@@ -128,7 +130,26 @@
                     `;
                 });
         });
+
+        // Helper function to get weather description from WMO code
+        const getWeatherDescription = (code) => {
+          const descriptions = {
+            0: "Clear sky", 1: "Mainly clear", 2: "Partly cloudy", 3: "Overcast",
+            45: "Fog", 48: "Depositing rime fog",
+            51: "Light drizzle", 53: "Moderate drizzle", 55: "Dense drizzle",
+            56: "Light freezing drizzle", 57: "Dense freezing drizzle",
+            61: "Light rain", 63: "Moderate rain", 65: "Heavy rain",
+            66: "Light freezing rain", 67: "Heavy freezing rain",
+            71: "Light snow fall", 73: "Moderate snow fall", 75: "Heavy snow fall",
+            77: "Snow grains",
+            80: "Light rain showers", 81: "Moderate rain showers", 82: "Violent rain showers",
+            85: "Light snow", 86: "Heavy snow",
+            95: "Thunderstorm", 96: "Thunderstorm with hail", 99: "Thunderstorm with heavy hail"
+          };
+          return descriptions[code] || "Unknown weather";
+        };
     </script>
 </body>
 </html>
+
 
