--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         const getWeatherDescription = (code) => {
           const descriptions = {
             0: "Clear sky", 1: "Mainly clear", 2: "Partly cloudy", 3: "Overcast",
-            45: "Fog", 48: "Depositing rime fog",
+            45: "Fog", 48: "Fog",
             51: "Light drizzle", 53: "Moderate drizzle", 55: "Dense drizzle",
             56: "Light freezing drizzle", 57: "Dense freezing drizzle",
             61: "Light rain", 63: "Moderate rain", 65: "Heavy rain",
