--- a/index.html
+++ b/index.html
@@ -18,24 +18,11 @@
             min-height: 100vh;
             text-align: center;
         }
-        .weather-card {
-            background-color: #1a1a1a;
-            padding: 2rem;
-            border-radius: 1rem;
-            box-shadow: 0 4px 14px rgba(0, 0, 0, 0.5);
-            max-width: 90%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 20rem;
-        }
     </style>
 </head>
 <body>
 
-    <div class="weather-card rounded-xl">
-        <h1 class="text-3xl font-bold mb-4"></h1>
+    <div>
         <div id="weather-display" class="flex flex-col items-center justify-center">
             <p>Checking weather for journey to LMS...</p>
         </div>
@@ -107,7 +94,6 @@
                     if (data && data.current) {
                         const temperature = data.current.temperature_2m.toFixed(0);
                         const weatherCode = data.current.weather_code;
-                        const windSpeed = data.current.wind_speed_10m.toFixed(1);
                         const description = getWeatherDescription(weatherCode);
                         const weatherEmoji = wmoWeatherCodeToEmoji(weatherCode);
 
@@ -115,7 +101,6 @@
                             <p class="text-7xl mb-4">${weatherEmoji}</p>
                             <div class="flex flex-col items-center justify-center">
                                 <p class="text-md capitalize">${description}. ${temperature}°C</p>
-                                <p class="text-md mt-2 text-gray-400">Wind: ${windSpeed} km/h</p>
                             </div>
                         `;
                     } else {
@@ -135,7 +120,7 @@
         const getWeatherDescription = (code) => {
           const descriptions = {
             0: "Clear sky", 1: "Mainly clear", 2: "Partly cloudy", 3: "Overcast",
-            45: "Fog", 48: "Fog",
+            45: "Fog", 48: "Depositing rime fog",
             51: "Light drizzle", 53: "Moderate drizzle", 55: "Dense drizzle",
             56: "Light freezing drizzle", 57: "Dense freezing drizzle",
             61: "Light rain", 63: "Moderate rain", 65: "Heavy rain",
@@ -151,5 +136,6 @@
     </script>
 </body>
 </html>
+
 
 
