--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div>
         <div id="weather-display" class="flex flex-col items-center justify-center">
-            <p>Checking weather for journey to LMS...</p>
+            <p>Checking weather for LMS route...</p>
         </div>
     </div>
 
@@ -98,7 +98,7 @@
                         const weatherEmoji = wmoWeatherCodeToEmoji(weatherCode);
 
                         displayElement.innerHTML = `
-                            <p class="text-7xl mb-4">${weatherEmoji}</p>
+                            <p class="text-8xl mb-4">${weatherEmoji}</p>
                             <div class="flex flex-col items-center justify-center">
                                 <p class="text-md capitalize">${description}. ${temperature}°C</p>
                             </div>
@@ -136,6 +136,7 @@
     </script>
 </body>
 </html>
+
 
 
 
