--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div>
         <div id="weather-display" class="flex flex-col items-center justify-center">
-            <p>Checking weather for LMS route...</p>
+            <p>Checking weather on route to LMS...</p>
         </div>
     </div>
 
@@ -98,9 +98,9 @@
                         const weatherEmoji = wmoWeatherCodeToEmoji(weatherCode);
 
                         displayElement.innerHTML = `
-                            <p class="text-8xl mb-4">${weatherEmoji}</p>
+                            <p class="text-[10rem] lg:text-[15rem] mb-0">${weatherEmoji}</p>
                             <div class="flex flex-col items-center justify-center">
-                                <p class="text-md capitalize">${description}. ${temperature}°C</p>
+                                <p class="text-xl capitalize">${description}. ${temperature}°C</p>
                             </div>
                         `;
                     } else {
@@ -136,6 +136,7 @@
     </script>
 </body>
 </html>
+
 
 
 
