--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <div>
         <div id="weather-display" class="flex flex-col items-center justify-center">
-            <p>Checking weather for LMS route...</p>
+            <p>Weather on jounery to LMS is...</p>
         </div>
     </div>
 
