--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <div>
         <div id="weather-display" class="flex flex-col items-center justify-center">
-            <p>Checking weather for LMS route...</p>
+            <p>Checking weather on your LMS route...</p>
             <p> </p>
             <p> 🚇   🚶🏼‍♀️‍➡️    🧥     ☂️   ? </p>
         </div>
