--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             const displayElement = document.getElementById('weather-display');
 
             // IMPORTANT: This URL must be from the most recent deployment of your Apps Script
-            const GAS_WEB_APP_URL = 'YOUR_NEWLY_DEPLOYED_APPS_SCRIPT_URL_HERE'; 
+            const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxHI6qHLY8cu8Ziy3s0P-QDIrrSOcM4ZH6-Oj1t2mzHDnaAuOYhDSr8LaTQPYgw3tRTAQ/exec'; 
             const LAT = 51.42;
             const LON = -0.22;
             const apiUrl = `${GAS_WEB_APP_URL}?lat=${LAT}&lon=${LON}`;
