--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                             <p class="text-[10rem] lg:text-[15rem]">${dailyWeatherEmoji}</p>
                             <div class="flex flex-col items-center justify-center mt-[-2rem]">
                                 <p class="text-xl capitalize">${dailyDescription}</p>
-                                <p class="text-md mt-2">High: ${dailyMaxTemp}°C / Low: ${dailyMinTemp}°C</p>
-                                <p class="text-md mt-2"> ${maxRainProbability}% 🌧️ - chance of rain in next 3 hrs </p>
+                                <p class="text-md mt-2">High ${dailyMaxTemp}°C  -   Low ${dailyMinTemp}°C</p>
+                                <p class="text-md mt-2">🌧️ ${maxRainProbability}%  -  chance of rain next 3 hrs </p>
                             </div>
                         `;
                         
