--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div>
         <div id="weather-display" class="flex flex-col items-center justify-center">
-            <p>Checking weather on your LMS route...</p>
+            <p>Checking weather for journey to LMS...</p>
             <p> </p>
             <p> </p>
             <p> 🚇      🚶🏼‍♀️‍➡️       🧥        ☂️      ? </p>
