--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class="flex flex-col items-center justify-center mt-[-2rem]">
                                 <p class="text-xl capitalize">${dailyDescription}</p>
                                 <p class="text-md mt-2">High ${dailyMaxTemp}°C  -   Low ${dailyMinTemp}°C</p>
-                                <p class="text-xl mt-2">🌧️ ${maxRainProbability}%  chance of rain in 2 hrs </p>
+                                <p class="text-xl mt-2">🌧️ ${maxRainProbability}%  chance of rain within 2 hrs </p>
                             </div>
                         `;
                         
