--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             min-height: 100vh;
             text-align: center;
         }
+        /* Add the white-space property to handle newlines */
+        #weather-display {
+            white-space: pre-line;
+        }
     </style>
 </head>
 <body>
@@ -26,7 +30,7 @@
             <p>Checking weather for journey to LMS...</p>
             <p> </p>
             <p> </p>
-            <p> 🚶🏼‍♀️‍➡️ 🚃 🚶🏼‍♀️‍➡️       🧥        ☂️      ? </p>
+            <p> 🚶🏼‍♀️‍➡️ 🚃 🚶🏼‍♀️‍➡️      🧥      ☂️      ? </p>
         </div>
     </div>
 
@@ -35,17 +39,17 @@
             const displayElement = document.getElementById('weather-display');
 
             // IMPORTANT: This URL must be from the most recent deployment of your Apps Script
-            const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwCW4-xc_wcBJdbcRYndulkp4asfBqrERxhPQoY-7oadT9nai5wTN7qG7H9OjDRkJunmg/exec'; 
+            const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwCW4-xc_wcBJdbcRYndulkp4asfBqrERxhPQoY-7oadT9nai5wTN7qG7H9OjDRkJunmg/exec';
             const LAT = 51.42;
             const LON = -0.22;
             const apiUrl = `${GAS_WEB_APP_URL}?lat=${LAT}&lon=${LON}`;
 
             if (GAS_WEB_APP_URL === 'YOUR_NEWLY_DEPLOYED_APPS_SCRIPT_URL_HERE') {
-                 displayElement.innerHTML = `
-                     <p class="text-red-500">Error: Google Apps Script URL not set.</p>
-                     <p class="text-sm mt-2">Please edit this file and replace 'YOUR_NEWLY_DEPLOYED_APPS_SCRIPT_URL_HERE' with your deployed web app URL.</p>
-                 `;
-                 return;
+                displayElement.innerHTML = `
+                    <p class="text-red-500">Error: Google Apps Script URL not set.</p>
+                    <p class="text-sm mt-2">Please edit this file and replace 'YOUR_NEWLY_DEPLOYED_APPS_SCRIPT_URL_HERE' with your deployed web app URL.</p>
+                `;
+                return;
             }
 
             // Helper function to get a weather emoji from a WMO code
@@ -111,7 +115,7 @@
                             <p class="text-[10rem] lg:text-[15rem]">${dailyWeatherEmoji}</p>
                             <div class="flex flex-col items-center justify-center mt-[-2rem]">
                                 <p class="text-xl capitalize">${dailyDescription}</p>
-                                <p class="text-md mt-2">High ${dailyMaxTemp}°C  -   Low ${dailyMinTemp}°C</p>
+                                <p class="text-md mt-2">High ${dailyMaxTemp}°C  -    Low ${dailyMinTemp}°C</p>
                                 <p class="text-xl mt-2">🌧️ ${maxRainProbability}%  chance of rain within 2 hrs </p>
                             </div>
                         `;
@@ -134,3 +138,4 @@
     </script>
 </body>
 </html>
+
