--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             const displayElement = document.getElementById('weather-display');
 
             // IMPORTANT: This URL must be from the most recent deployment of your Apps Script
-            const GAS_WEB_APP_URL = 'https://script.google.com/macros/library/d/1uY2-e1w62b5o-1HCpXY_tJ7lnfWHXwWWEcEZYf430XdhFEEiwskcdg1z/18';
+            const GAS_WEB_APP_URL = 'AehSKLjqnk1ZgBDJiKgA6M7cFSn403vikMk3rcwqVv2EbpxDWhgb0i7cAvPPy5CmqjCT5Jki19RZffYqD7TQBePHo_enIAbd_OLl93WmXilynMU';
             const LAT = 51.42;
             const LON = -0.22;
             const apiUrl = `${GAS_WEB_APP_URL}?lat=${LAT}&lon=${LON}`;
