--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 return;
             }
 
-            // Helper function to get a weather emoji from a WMO code
+            // Helper function to get a weather emoji from a WMO code fff
             const wmoWeatherCodeToEmoji = (code, isDay) => {
                 const isNight = isDay === 0;
                 const emojis = {
