--- a/index.html
+++ b/index.html
@@ -18,17 +18,13 @@
             min-height: 100vh;
             text-align: center;
         }
-        /* Add the white-space property to handle newlines */
-        #weather-display {
-            white-space: pre-line;
-        }
     </style>
 </head>
 <body>
     <div>
         <div id="weather-display" class="flex flex-col items-center justify-center">
             <p>Checking weather for journey to LMS...</p>
-           <br>
+            <br>
             <p> 🚶🏼‍♀️‍➡️ 🚃 🚶🏼‍♀️‍➡️       🧥       ☂️       ? </p>
         </div>
     </div>
@@ -38,11 +34,10 @@
             const displayElement = document.getElementById('weather-display');
 
             // IMPORTANT: This URL must be from the most recent deployment of your Apps Script
-            const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbyqNZJhOOMDtFwgB5EWaoUuewSijG_DvWB3a015qSshCUsTDAhVaMSlv3jGtc6kKeGMoQ/exec';
+            const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzP0BpghIq0aWod094PfFGwam8TZ2KL8Wx7oiHsT0CvQO89HrvM0So-u--GxUrfVixP8A/exec';
             const LAT = 51.42;
             const LON = -0.22;
-            // Add the 'past_days=1' parameter to the API URL to fetch yesterday's data
-            const apiUrl = `${GAS_WEB_APP_URL}?lat=${LAT}&lon=${LON}&past_days=1`;
+            const apiUrl = `${GAS_WEB_APP_URL}`;
 
             if (GAS_WEB_APP_URL === 'YOUR_NEWLY_DEPLOYED_APPS_SCRIPT_URL_HERE') {
                 displayElement.innerHTML = `
@@ -52,7 +47,7 @@
                 return;
             }
 
-            // Helper function to get a weather emoji from a WMO code fff
+            // Helper function to get a weather emoji from a WMO code
             const wmoWeatherCodeToEmoji = (code, isDay) => {
                 const isNight = isDay === 0;
                 const emojis = {
@@ -98,6 +93,7 @@
                 .then(data => {
                     if (data && data.daily && data.hourly) {
                         // Extract daily data for overall forecast
+                        // The API now returns two days, so today is at index 1 and yesterday is at index 0.
                         const dailyWeatherCode = data.daily.weather_code[1];
                         const dailyMaxTemp = data.daily.temperature_2m_max[1].toFixed(0);
                         const dailyMinTemp = data.daily.temperature_2m_min[1].toFixed(0);
@@ -108,9 +104,9 @@
 
                         // Calculate the temperature difference
                         const tempDiff = dailyMaxTemp - yesterdayMaxTemp;
-                        const diffText = tempDiff > 0 ? `${Math.abs(tempDiff)}°C higher than yesterday` :
-                                            tempDiff < 0 ? `${Math.abs(tempDiff)}°C lower than yesterday` :
-                                            `Same high as yesterday`;
+                        const diffText = tempDiff > 0 ? `${Math.abs(tempDiff)}°C warmer than yesterday` :
+                                            tempDiff < 0 ? `${Math.abs(tempDiff)}°C cooler than yesterday` :
+                                            `Similar temprature to yesterday`;
 
                         // Use current data for day/night
                         const isDay = data.current.is_day;
@@ -119,14 +115,14 @@
                         // Extract hourly data for the 2-hour rain forecast
                         const rainProbabilities = data.hourly.precipitation_probability.slice(0, 2);
                         const maxRainProbability = Math.max(...rainProbabilities);
-
+                        
                         displayElement.innerHTML = `
-                            <p class="text-[10rem] lg:text-[15rem]">${dailyWeatherEmoji}</p>
-                            <div class="flex flex-col items-center justify-center mt-[-2rem]">
+                            <p class="text-[10rem] lg:text-[15rem] leading-none mb-[-2rem]">${dailyWeatherEmoji}</p>
+                            <div class="flex flex-col items-center justify-center">
                                 <p class="text-xl capitalize">${dailyDescription}</p>
-                                <p class="text-md mt-2">High ${dailyMaxTemp}°C   -     Low ${dailyMinTemp}°C</p>
+                                <p class="text-md mt-2">High ${dailyMaxTemp}°C - Low ${dailyMinTemp}°C</p>
                                 <p class="text-md mt-1">${diffText}</p>
-                                <p class="text-xl mt-2">🌧️ ${maxRainProbability}%   chance of rain within 2 hrs </p>
+                                <p class="text-xl mt-2">🌧️ ${maxRainProbability}% chance of rain within 2 hrs</p>
                             </div>
                         `;
                         
