--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="weather-display" class="flex flex-col items-center justify-center">
             <p>Checking weather for journey to LMS...</p>
             <br>
-            <p> 🚶🏼‍♀️‍➡️ 🚃 🚶🏼‍♀️‍➡️       🧥       ☂️       ? </p>
+            <p> 🚶🏼‍♀️‍➡️ 🚃 🚶🏼‍♀️‍➡️       🧥       ☂️       ? </p>
         </div>
     </div>
 
@@ -115,13 +115,13 @@
                         // Extract hourly data for the 2-hour rain forecast
                         const rainProbabilities = data.hourly.precipitation_probability.slice(0, 2);
                         const maxRainProbability = Math.max(...rainProbabilities);
-                        
+                        
                         displayElement.innerHTML = `
                             <p class="text-[10rem] lg:text-[15rem] leading-none mb-[-2rem]">${dailyWeatherEmoji}</p>
                             <div class="flex flex-col items-center justify-center">
                                 <p class="text-xl capitalize">${dailyDescription}</p>
-                                <p class="text-md mt-2">High ${dailyMaxTemp}°C - Low ${dailyMinTemp}°C</p>
-                                <p class="text-md mt-1">${diffText}</p>
+                                <p class="text-xl mt-2">High ${dailyMaxTemp}°C - Low ${dailyMinTemp}°C</p>
+                                <p class="text-xl">${diffText}</p>
                                 <p class="text-xl mt-2">🌧️ ${maxRainProbability}% chance of rain within 2 hrs </p>
                             </div>
                         `;
