--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <p class="text-[10rem] lg:text-[15rem] leading-none mb-[-2rem]">${dailyWeatherEmoji}</p>
                             <div class="flex flex-col items-center justify-center">
                                 <br>
-                                <p class="text-xl capitalize">${dailyDescription}</p>
+                                <p class="text-3xl capitalize">${dailyDescription}</p>
                                 <p class="text-xl mt-2">High ${dailyMaxTemp}°C - Low ${dailyMinTemp}°C</p>
                                 <p class="text-xl">${diffText}</p>
                                 <br>
