--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                             <p class="text-7xl leading-none">${dailyWeatherEmoji}</p> 
                             <div class="flex flex-col items-center justify-center">
                                 <p class="main-text capitalize mt-2">${dailyDescription}</p> 
-                                <p class="text-xl mt-2">High **${dailyMaxTemp}°C** / Low **${dailyMinTemp}°C**</p> 
+                                <p class="text-xl mt-2">High ${dailyMaxTemp}°C / Low ${dailyMinTemp}°C</p> 
                                 <p class="text-xl font-bold">${diffText}</p>
                                 <br>
-                                <p class="text-xl mt-2">🌧️ **${maxRainProbability}%** chance of rain within 2 hrs</p>
+                                <p class="text-xl mt-2">🌧️${maxRainProbability}% chance of rain within 2 hrs</p>
                             </div>
                         `;
                         
